Bug 75815 - EDITING: References of links to external files are changed, inserting or deleting rows above them.
Summary: EDITING: References of links to external files are changed, inserting or dele...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: highest major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-03-06 00:11 UTC by m_a_riosv
Modified: 2014-03-12 00:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Links source file (10.97 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-03-06 00:11 UTC, m_a_riosv
Details
Sample file with links to an external file. (22.70 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-03-06 00:13 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2014-03-06 00:11:55 UTC
Created attachment 95200 [details]
Links source file

Having external links to other spreadsheets, when deleting or inserting rows above those, changes the references in the links. The issue begin with 4.2 series.

Win7x64Ultimate
Version: 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Version: 4.2.2.1 Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f
Version: 4.2.3.0.0+ Build ID: 9a32be03681a595ce075e6fc6d6c60494a70a2fb
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-03-04_16:12:48
Version: 4.3.0.0.alpha0+ Build ID: 4402efc18ae16e279d55858946d2c8b8972f3f9f
   TinderBox: Win-x86@39, Branch:master, Time: 2014-03-04_00:54:43

Last working.
Version: 4.1.6.0.0+ Build ID: ff2704d22bab86d9e58df812bc01482cfb4bb26

Attached source links file.
Comment 1 m_a_riosv 2014-03-06 00:13:17 UTC
Created attachment 95201 [details]
Sample file with links to an external file.

Sample file with links to the file in the report.
Comment 2 Joel Madero 2014-03-07 03:00:29 UTC
Ah - almost closed this as not a bug but realized my mistake. 

Thank you for reporting this issue! I have been able to confirm the issue on:
Version: 4.3.0.0.alpha0
Date:   Tue Feb 25 19:58:48 2014 +0100 
Platform :Ubuntu 13.10
DE: GNOME3

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
As I've been able to confirm this problem I am marking as:

New (confirmed)
Major - loss of data by changing formulas
Highest - default is high but bumped up due to regression

MAB4.2

regression

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage and join us on freenode at #libreoffice-qa

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 3 Jean-Baptiste Faure 2014-03-08 10:02:38 UTC
Set the missing version number.

Best regards. JBF
Comment 4 Kohei Yoshida 2014-03-10 22:41:23 UTC
I'll take it.
Comment 5 Commit Notification 2014-03-11 00:45:03 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=149b580900214c477f8eaf9dd51342796d27b296

fdo#75815: Write test for this first.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-03-11 00:45:16 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd7787ed75e33b65ebee2a6c0aa152efded6f1b8

fdo#75815: Adjust external references here too.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-03-11 00:47:39 UTC
4.2 backport: https://gerrit.libreoffice.org/8529
Comment 8 Commit Notification 2014-03-12 00:09:30 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=57ba6cf00b3258838ef6ec75ce7c1c7c38ade751&h=libreoffice-4-2

fdo#75815: Adjust external references here too.


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-03-12 00:23:37 UTC
Fixed.