fdo#75815: Adjust external references here too.

Adjusting external references are much simpler than adjusting internal
ones since we don't need to worry about deleted references etc.

Change-Id: I82111e383e1fc6976ef08c1438c3dd916a249af6
(cherry picked from commit dd7787ed75e33b65ebee2a6c0aa152efded6f1b8)